Fix body overflow

--- a/src/style.scss
+++ b/src/style.scss
@@ -9,6 +9,7 @@ html {
 
 body {
   margin: 0;
+  overflow-x: hidden;
 }
 
 html, * {
